<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_person"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_plan"
        android:icon="@drawable/ic_time"
        android:title="@string/title_plan" />

    <item
        android:id="@+id/navigation_map"
        android:icon="@drawable/ic_map"
        android:title="@string/title_map" />

    <item
        android:id="@+id/navigation_dictionary"
        android:icon="@drawable/ic_book"
        android:title="@string/title_dictionary" />

    <item
        android:id="@+id/navigation_info"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />

</menu>
