<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="?dialogPreferredPadding"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/nav_bar_height">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/silent_text" />

    <Button
        android:id="@+id/friday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/silent_friday" />

    <Button
        android:id="@+id/saturday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/silent_saturday" />

    <Button
        android:id="@+id/sunday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/silent_sunday" />

    <Button
        android:id="@+id/monday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/silent_monday" />
</LinearLayout>