<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="?dialogPreferredPadding"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_plan"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_plan_summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/plan_heimatlos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_plan_1" />

    <Spinner
        android:id="@+id/plan_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:entries="@array/plan_spinner_loading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_plan_2" />

    <Spinner
        android:id="@+id/plan_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:entries="@array/plan_spinner_loading" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/plan_heimweh"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_plan_3" />

    <Spinner
        android:id="@+id/plan_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:entries="@array/plan_spinner_loading" />
</LinearLayout>