<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:text="@string/setup_name_summary"
        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

    <EditText
        android:id="@+id/nameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="?dialogPreferredPadding"
        android:singleLine="true"
        android:hint="@string/setup_name_hint"
        android:inputType="textCapSentences"
        android:importantForAutofill="no" />
</LinearLayout>